parse/internal/parser/testdata/failing/union-double-semi-ignore.trunnel
struct double_semi {
    u8 tag;
    union addr[tag] {
       4 : ignore; ;
    };
}
